--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,8 +1,1 @@
-{
-  "properties": [
-    {
-      "name": "upload.path",
-      "type": "java.lang.String",
-      "description": "for uploads."
-    }
-  ] }
+{ "properties": [ ] }
