--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,11 @@ logging.level.root=INFO
 logging.file.max-history=5
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=lib.web@yandex.ru
-spring.mail.password=web12345678lib
+spring.mail.username=steshko02@yandex.by
+spring.mail.password=saha12345
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
 upload.path=/D:/EpamFP/uploads
 server.port=8080
